--- a/client/src/compCss/Message.css
+++ b/client/src/compCss/Message.css
@@ -2,4 +2,5 @@ strong {
     color: green;
     font-size: 32px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    line-height: 24px;
 }
