added more styling

--- a/client/src/compCss/Message.css
+++ b/client/src/compCss/Message.css
@@ -4,3 +4,5 @@ strong {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     line-height: 24px;
 }
+
+/* I'm just adding this in because it's not letting me push. Keeps saying I'm up to date, even though I'm not. This is annoying.  */
