--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,4 +17,9 @@ body {
   font-size: 48px;
 }
 
-
+.bioBlock {
+  border: 4px solid black;
+  padding: 10px;
+  border-radius: 5%;
+  margin-bottom: 10px;
+}
