--- a/client/src/pageCss/MyBudget.css
+++ b/client/src/pageCss/MyBudget.css
@@ -7,60 +7,13 @@
     text-align: center;
 }
 
-#total-budget   {
-    margin-top: 10px;
+.budget-row {
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
-}
-#rent-row {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
 }
 
-#car-row {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
-}
-
-#food-row {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
-}
-
-#utility-row {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
-}
-
-#school-row {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
-}
-
-#misc-row {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    background-color: rgb(6, 177, 6);
-}
 #budget-btn {
     margin-top: 10px;
 }
