added some styling. attempted to resize pie chart

--- a/client/src/pageCss/MyBills.css
+++ b/client/src/pageCss/MyBills.css
@@ -3,11 +3,16 @@
 text-align: center;
 height: 37vw;
 overflow-y: scroll;
+background-color: lightgreen;
+padding-top: 10px;
 }
+
 #unPaidBillCardCol {
 text-align: center;
 height: 37vw;
 overflow-y: scroll;
+background-color: lightgreen;
+padding-top: 10px;
 }
 
 .paidBillHeader {
@@ -21,7 +26,5 @@ overflow-y: scroll;
     margin: auto;
     margin-bottom: 10px;
 }
-
-
 
 /* make media query to move unpaid header underneath paidbill column at 770px width */
