--- a/client/src/pageCss/MyBudget.css
+++ b/client/src/pageCss/MyBudget.css
@@ -9,8 +9,8 @@
 
 .budget-row {
     margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     margin-bottom: 10px;
 }
 
